# Pink_Resurected

./: .gitignore  CMakeLists.txt  README.md  fix_encoding.py
scripts/: cropgif.sh  disturb.sh  rename.py  showgrid.sh
src/include/: FIFO.hpp  bdd.h  bdd3.h  generic_macros.h  jccodimage.h  jccomptree.h  jcgraphes.h  jcimage.h  jclabelextrema.h  jclderiche.h  l2dcollapse.h  l2dkhalimsky.h  l3dcollapse.h  l3dkhalimsky.h  lMSF.h  larith.h  lasft.h  lattrib.h  lattribarea.h  lattribheight.h  lattribute.h  lattribvol.h  lballincl.h  lbarycentre.h  lbdigitalline.h  lborder.h  lbresen.h  lcomphisto.h  lcontours.h  lconvexhull.h  lconvol.h  lconvol3.h  lcrop.h  lcurves.h  lderiche.h  ldetectcercles.h  ldiZenzo.h  ldilateros.h  ldilateros3d.h  ldir.h  (+144 more)
src/lib/: DirectionalSkeletonizer.cxx  bdd1_alphacube.c  bdd2_alpha.c  bdd2_beta.c  bdd3.c  bimage.c  fmmgeodist.c  jccodimage.c  jccomptree.c  jcgraphes.c  jcimage.c  jclabelextrema.c  l2dcollapse.c  l2dkhalimsky.c  l3dcollapse.c  l3dkhalimsky.c  lMSF.c  larith.c  lasft.c  lattribarea.c  lattribheight.c  lattribute.c  lattribvol.c  lballincl.c  lbarycentre.c  lbdigitalline.cxx  lborder.c  lbresen.c  lcomphisto.c  lcontours.c  lconvexhull.c  lconvol.c  lconvol3.c  lcrop.c  lcurves.c  lderiche.c  ldetectcercles.c  ldiZenzo.c  ldilateros.c  ldilateros3d.c  (+132 more)
src/tools/ARITH/: add.c  addconst.c  area.c  argmax.c  argmin.c  average.c  complex_imaginary.c  complex_modulus.c  complex_real.c  correctbias.c  diffimages.c  div.c  dup.c  equal.c  exp.c  gammacor.c  genfield.c  genimage.c  genkernel.c  inf.c  inverse.c  isnull.c  log.c  mask.c  max.c  max1.c  min.c  min1.c  moyenne.c  mult.c  normalize.c  otsu.c  pow.c  scale.c  selndg.c  seuil.c  seuil2.c  seuilOtsu.c  seuilauto.c  sub.c  (+4 more)
src/tools/CONNECT/: amont.c  areaclosing.c  areaopening.c  areaselnb.c  deletecomp.c  geodilat.c  geoeros.c  heightmaxima.c  heightminima.c  heightselnb.c  label.c  labeldil.c  labelfgd.c  nbcomp.c  propgeo.c  saliency.c  segmentarea.c  segmentheight.c  segmentnum.c  segmentvol.c  selectcomp.c  shortestpath.c  volmaxima.c  volselnb.c  watershed.c  watershedMeyer.c  watershedMeyer2.c  watershedMeyer2lab.c  watershedMeyer3.c  watershedthin.c  watershedwithoutline.c  watershedwithoutlinelab.c  wshedtopo.c
src/tools/CONVERT/: 2elisp.c  2latex.c  ac2pink.c  any2complex.c  bmp2pgm.c  bmp2ppm.c  byte2float.c  byte2long.c  car2pol.c  catgif.c  catpgm.c  changename.c  concat3d.c  double2byte.c  explode.c  explodecomp.c  extrude.c  float2byte.c  float2long.c  graph2pgm.c  graph2ps.c  hls2rgb.c  list2pgm.c  long2byte.c  long2float.c  mhd2pgm.c  nifti2pgm.c  ombre.c  pgm2bmp.c  pgm2closedcurve.c  pgm2curve.c  pgm2graph.c  pgm2list.c  pgm2pov.c  pgm2ppm.c  pgm2ps.c  pgm2raw.c  pgm2slc.c  pgm2vtk.c  pgmascmode.c  (+18 more)
src/tools/DIVERS/: bruite.c  colorize.c  genbicol.c  genbini.c  genlut.c  gradill.c  grid.c  interpolate.c  kanungonoise.c  randimage.c  randpoints.c  randrgb.c  seamcarving.c  shake.c  showheader.c  showpoint.c  skew.c
src/tools/DRAW/: animscenes.c  curve2spline.c  drawball.c  drawcurve.c  drawcylinder.c  drawellipse.c  drawfield.c  drawfieldlists.c  drawgraph.c  drawline.c  drawlines.c  drawquadrangle.c  drawrect.c  drawscene.c  drawspline.c  drawsplineorient.c  drawsplines.c  drawsplinesorient.c  drawsplinesorient2.c  drawtorus.c  drawtriangle.c  drawtriangulation.c  genball.c  line.c  points2spline.c  samplespline.c  worms.c
src/tools/EXPERIMENTAL/: 3dsphere.c  contours.c  dynrecons.c  jones.c  lenoir.c  levialdi.c  reconsplateaux.c  remspnoise.c  segmentlignes.c  souzabanon.c  split.c
src/tools/GA/: GA2khalimsky.c  GA2pgm.c  GA2tikz.c  GAwatershed.c  GAwatershedDouble.c  MSF.c  MSF4d.c  pgm2GA.c  pgm2GA4d.c  ppm2GA.c  saliencyGA.c  watershedMeyer4D.c  wshedkhalimsky.c  wshedval.c
src/tools/GEO/: affine.c  attribute.c  autocrop.c  barycentre.c  barycentrelab.c  boxmin.c  cadre.c  convexhull.c  crop.c  cropondisk.c  curvatures.c  curve2segments.cxx  curvelength.cxx  curvenormalplanes.cxx  curvesections.c  curvetangents.cxx  deframe.c  delaunay.c  delaunaymask.c  detectcercles.c  directions.c  ellipsefind.c  ellipsefit.c  ellipseincl.c  ellipseparams.c  ellipticite.c  encadre.c  enframe.c  enframe3d.c  expandframe.c  extractline.c  extractplane.c  fitcircle.c  frame.c  gencurv.c  genplane.c  houghcercles.c  identifyline.c  identifyparabola2.c  identifyparabola3.c  (+35 more)
src/tools/HISTO/: comphisto.c  countvalues.c  egalise.c  histo.c  histo2.c  histoazimuth.c  histoazimuth2.c  histodist.c  histoelevation.c  histoelevation2.c  histolisse.c  histopgm.c  histosieve.c  histscal.c  histstretch.c  printhisto.c  printstats.c  relabel.c  seuilhisto.c  stretch.c
src/tools/MESH3D/: mcm2ac.c  mcm2vtk.c  mcmbuild.c  mcube.c  meshaddnoise.c  meshconvert.c  meshflatten.c  meshregul.c  surfels.c
(+229 files in other folders)
